cluster/apps/utils/konflate/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: konflate-ingress
  namespace: default
spec:
  description: Allow the Tailscale webhook proxy to POST to Konflate
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: konflate
      app.kubernetes.io/name: konflate
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: networking
            k8s:app.kubernetes.io/component: tailscale-connector
            k8s:tailscale.com/managed: "true"
            k8s:tailscale.com/parent-resource-type: ingress
            k8s:tailscale.com/parent-resource-ns: default
            k8s:tailscale.com/parent-resource: konflate-webhook
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: POST
                path: "^/hooks$"
  enableDefaultDeny:
    ingress: true
    egress: false
  log:
    value: konflate-ingress
